# tiramisu

./: .gitignore  CMakeLists.txt  configure.cmake
benchmarks/: compile_and_run_benchmarks.sh
benchmarks/old_tensors/baryon/tiramisu_make_fused_baryon_blocks_correlator/: performance_CPU.csv  tiramisu_make_fused_baryon_blocks_correlator_generator  tiramisu_make_fused_baryon_blocks_correlator_generator.cpp  tiramisu_make_fused_baryon_blocks_correlator_wrapper  tiramisu_make_fused_baryon_blocks_correlator_wrapper.cpp
benchmarks/old_tensors/dibaryon/tiramisu_make_fused_dibaryon_blocks_correlator/: tiramisu_make_fused_dibaryon_blocks_correlator_generator
benchmarks/old_tensors/utils/: qblocks_2pt_parameters.h
benchmarks/tensors/baryon/tiramisu_make_fused_baryon_blocks_correlator/: CMakeLists.txt  best.txt  generated_tiramisu_make_fused_baryon_blocks_correlator.o.h  generator  performance_CPU.csv  script.txt  test.txt  tiramisu_make_fused_baryon_blocks_correlator_autoscheduler.cpp  tiramisu_make_fused_baryon_blocks_correlator_generator.cpp  tiramisu_make_fused_baryon_blocks_correlator_wrapper  tiramisu_make_fused_baryon_blocks_correlator_wrapper.cpp  tiramisu_make_fused_baryon_blocks_correlator_wrapper.h  tiramisu_make_fused_baryon_blocks_correlator_wrapper_2.cpp
benchmarks/tensors/dibaryon/tiramisu_make_fused_dibaryon_blocks_correlator/: CMakeLists.txt  generated_tiramisu_make_fused_dibaryon_blocks_correlator.o.h  script.txt  tiramisu_make_fused_dibaryon_blocks_correlator_autoscheduler.cpp  tiramisu_make_fused_dibaryon_blocks_correlator_generator  tiramisu_make_fused_dibaryon_blocks_correlator_generator.cpp  tiramisu_make_fused_dibaryon_blocks_correlator_wrapper.cpp
benchmarks/tensors/dibaryon/tiramisu_make_threaded_dibaryon_blocks_correlator/: CMakeLists.txt  generated_tiramisu_make_threaded_dibaryon_blocks_correlator.o.h  generator  performance_CPU.csv  script.txt  tiramisu_make_threaded_dibaryon_blocks_correlator_autoscheduler.cpp  tiramisu_make_threaded_dibaryon_blocks_correlator_generator  tiramisu_make_threaded_dibaryon_blocks_correlator_generator.cpp  tiramisu_make_threaded_dibaryon_blocks_correlator_ref.cpp  tiramisu_make_threaded_dibaryon_blocks_correlator_wrapper  tiramisu_make_threaded_dibaryon_blocks_correlator_wrapper.cpp  tiramisu_make_threaded_dibaryon_blocks_correlator_wrapper.h
benchmarks/tensors/dibaryon_copy/tiramisu_make_fused_dibaryon_blocks_correlator/: tiramisu_make_fused_dibaryon_blocks_correlator_generator  tiramisu_make_fused_dibaryon_blocks_correlator_generator.cpp  tiramisu_make_fused_dibaryon_blocks_correlator_ref.cpp  tiramisu_make_fused_dibaryon_blocks_correlator_wrapper.cpp  tiramisu_make_fused_dibaryon_blocks_correlator_wrapper.h  tiramisu_make_fused_identical_dibaryon_blocks_correlator_generator.cpp  (+2 more)
benchmarks/tensors/utils/: qblocks_2pt_parameters.h
html/: md_ARTIFACT_EVALUATION.html  md_INSTALL.html  md_README.html  md_README_distributed.html  pages.html
html/search/: all_0.js  all_1.js  all_4.js  files_2.js  pages_1.js  pages_2.js  searchdata.js
include/tiramisu/: core.h  debug.h  expr.h
include/tiramisu/auto_scheduler/: ast.h  auto_scheduler.h  evaluator.h  schedules_generator.h  search_method.h
latex/: md_ARTIFACT_EVALUATION.tex  md_INSTALL.tex  md_README.tex  md_README_distributed.tex  refman.tex
python_bindings/: CMakeLists.txt
python_bindings/src/: CMakeLists.txt  PyAutoscheduler.cpp  PyAutoscheduler.h  PyTiramisu.cpp
src/: CMakeLists.txt  tiramisu_codegen_halide.cpp  tiramisu_codegen_halide_lowering.cpp  tiramisu_core.cpp  tiramisu_function.cpp
src/auto_scheduler/: tiramisu_ast.cpp  tiramisu_auto_scheduler.cpp  tiramisu_dnn_accesses.cpp  tiramisu_evaluator.cpp  tiramisu_schedules_generator.cpp  tiramisu_search_method.cpp
tests/: test_global.cpp
tutorials/autoscheduler/: CMakeLists.txt  function1050000_autoscheduler.cpp  function1050000_wrapper.h  generator
tutorials/tutorial_autoscheduler/: generator  script.txt
tutorials/tutorial_autoscheduler/nussinov/: CMakeLists.txt  nussinov.cpp  nussinov_autoscheduler.cpp  nussinov_wrapper.cpp  nussinov_wrapper.h  script.txt
utils/scripts/: install_submodules.sh
(+19 files in other folders)
